--- a/app/code/Prince/Buynow/composer.json
+++ b/app/code/Prince/Buynow/composer.json
@@ -1,23 +1,22 @@
 {
-    "name": "prince/module-buynow",
-    "description": "Magento 2 add buyNow button extension",
-    "license": "proprietary",
+    "name": "prince/module-buynowbeta",
+    "description": "Magento2 BuyNow Module",
+    "require": {
+        "magento/module-store": ">100.0",
+        "magento/module-backend": ">100.0",
+        "magento/framework": ">100.0"
+    },
     "type": "magento2-module",
-    "version": "1.0.1",
-    "authors": [
-        {
-            "name": "Prince Patel",
-            "email": "7pprince@gmail.com"
-        }
+    "version": "1.0.0",
+    "license": [
+        "proprietary"
     ],
-    "minimum-stability": "dev",
-    "require": {},
     "autoload": {
         "files": [
             "registration.php"
         ],
         "psr-4": {
-            "Prince\\Test\\": ""
+            "Prince\\Buynow\\": ""
         }
     }
 }
