--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Magento2 Buy Now Module",
     "homepage": "https://github.com/mageprince/magento2-productAttachment",
     "type": "magento2-module",
+    "version": "1.0.0",
     "license": "GPL-3.0-or-later",
     "authors": [
         {
