--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Prince\\Buynow\\": ""
+            "Mageprince\\BuyNow\\": ""
         }
     }
 }
